[gd_scene load_steps=8 format=3 uid="uid://j0rcy7l48su3"]

[ext_resource type="Script" uid="uid://8dsfpxh2vnou" path="res://rengo/views/vn_scene.gd" id="1_as5si"]
[ext_resource type="Script" uid="uid://dval27m2d3bcl" path="res://rengo/views/acting_layer_view.gd" id="2_2lguw"]
[ext_resource type="Script" uid="uid://5jtievqw2dld" path="res://rengo/views/dialog_layer_view.gd" id="3_aabbe"]
[ext_resource type="Script" uid="uid://do7v0svjsc66y" path="res://rengo/views/stage_view.gd" id="3_iy6ap"]
[ext_resource type="Script" uid="uid://5nhmkrsb61ia" path="res://rengo/views/actor.gd" id="4_h77dx"]
[ext_resource type="Script" uid="uid://7u752sqljvco" path="res://rengo/scenes/camera/vn_camera_3d.gd" id="5_h77dx"]
[ext_resource type="Script" uid="uid://dgy52rhi436bw" path="res://game/test_scene_script.gd" id="6_script"]

[node name="vn_scene" type="Node3D"]
script = ExtResource("1_as5si")
scene_name = "demo_scene"

[node name="ActingLayer" type="Node3D" parent="."]
script = ExtResource("2_2lguw")
metadata/_custom_type_script = "uid://dval27m2d3bcl"

[node name="StageView" type="Node3D" parent="ActingLayer"]
script = ExtResource("3_iy6ap")
default_plan_id = "medium_shot"
metadata/_custom_type_script = "uid://do7v0svjsc66y"

[node name="Actor" type="Node3D" parent="ActingLayer/StageView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3208084, 0, 0)
script = ExtResource("4_h77dx")
actor_name = "me"
base_size = Vector2(0.7, 1.7)
metadata/_custom_type_script = "uid://5nhmkrsb61ia"

[node name="Actor2" type="Node3D" parent="ActingLayer/StageView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7849016, 0, 0)
script = ExtResource("4_h77dx")
actor_name = "other"
base_size = Vector2(0.7, 1.7)
metadata/_custom_type_script = "uid://5nhmkrsb61ia"

[node name="VNCamera3D" type="Camera3D" parent="ActingLayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.7965145)
script = ExtResource("5_h77dx")
plan_id = "medium_shot"
focal_min = 13.0
focal_default = 35.0
background_image_path = "uid://dupbnswtmfqis"
mouse_camera_enabled = false
metadata/_custom_type_script = "uid://7u752sqljvco"

[node name="VNCamera3D2" type="Camera3D" parent="ActingLayer"]
transform = Transform3D(0.7071068, 0, 0.7071068, 0, 1, 0, -0.7071068, 0, 0.7071068, 3, 0, 3)
near = 0.035
script = ExtResource("5_h77dx")
plan_id = "close_up"
focal_min = 13.0
focal_default = 13.2
background_image_path = "uid://b4ity2jsgxp5x"
mouse_camera_enabled = false
metadata/_custom_type_script = "uid://7u752sqljvco"

[node name="DialogLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_aabbe")
metadata/_custom_type_script = "uid://5jtievqw2dld"

[node name="SceneScript" type="Node" parent="."]
script = ExtResource("6_script")
